@@ -14,6 +14,7 @@
 	- python: add rpm.ps() object to carry problem set info.
 	- python: permit rpm.ds() analogue to hdr.dsFromHeader() creator.
 	- python: permit rpm.fi() analogue to hdr.fiFromHeader() creator.
+	- silently add default %defattr(-,root,root) for all packages.
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
